src/objects/jiffle__Briefing_Acc_Opp_Relations__c.object
<CustomObject>
    <description>Used to store the relationship between Account/Opportunity/Briefing objects</description>
    <fields>
        <fullName>jiffle__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Briefings</relationshipLabel>
        <relationshipName>Briefing_Acc_Opp_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Briefing_ID__c</fullName>
        <formula>jiffle__Briefing__r.jiffle__Briefing_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Briefing ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Briefing_Status__c</fullName>
        <formula>text(jiffle__Briefing__r.jiffle__Request_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Briefing Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Briefing__c</fullName>
        <label>Briefing</label>
        <referenceTo>jiffle__Briefing__c</referenceTo>
        <relationshipLabel>Briefing Relations</relationshipLabel>
        <relationshipName>BriefingRelations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>jiffle__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Briefings</relationshipLabel>
        <relationshipName>Briefing_Acc_Opp_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Start_Date__c</fullName>
        <formula>jiffle__Briefing__r.jiffle__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jiffle__Unique_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Briefing Acc Opp Relations</label>
    <nameField>
        <displayFormat>BAO-{00000}</displayFormat>
        <label>Relationship Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Briefing Acc Opp Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>